2008-11-16  Tobias Burnus  <burnus@net-b.de>

	PR fortran/38095
	* gfortran.dg/char_length_13.f90: New test.

2008-11-16  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/pr36246.c: Add -fomit-frame-pointer to dg-options.
	* gcc.target/i386/pr32661-1.c: Ditto.
	* gcc.target/i386/pr34256.c: Ditto.
	* gcc.target/i386/pr22076.c: Ditto. Check for "movl" instruction on
	nonpic targets only.

2008-11-16  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38119
	* gfortran.dg/array_temporaries_3.f90: New test.

2008-11-15  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libfortran/37294
	* gfortran.dg/namelist_57.f90: New test.
	* gfortran.dg/namelist_print_1.f: Adjust test conditions.

2008-11-15  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/37926
	* gfortran.dg/dummy_procedure_3.f90: New test.

2008-11-15  Jakub Jelinek  <jakub@redhat.com>

	PR target/38123
	* gcc.c-torture/compile/pr38123.c: New test.

2008-11-15  Richard Guenther  <rguenther@suse.de>
	    Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/38051
	* gcc.c-torture/execute/pr38051.c: New testcase.

2008-11-15  Joshua Kinard  <kumba@gentoo.org>
	    Richard Sandiford  <rdsandiford@goolemail.com>

	* gcc.target/mips/fix-r10000-1.c: New test.
	* gcc.target/mips/fix-r10000-2.c: Likewise.
	* gcc.target/mips/fix-r10000-3.c: Likewise.
	* gcc.target/mips/fix-r10000-4.c: Likewise.
	* gcc.target/mips/fix-r10000-5.c: Likewise.
	* gcc.target/mips/fix-r10000-6.c: Likewise.
	* gcc.target/mips/fix-r10000-7.c: Likewise.
	* gcc.target/mips/fix-r10000-8.c: Likewise.
	* gcc.target/mips/fix-r10000-9.c: Likewise.
	* gcc.target/mips/fix-r10000-10.c: Likewise.
	* gcc.target/mips/fix-r10000-11.c: Likewise.
	* gcc.target/mips/fix-r10000-12.c: Likewise.
	* gcc.target/mips/fix-r10000-13.c: Likewise.
	* gcc.target/mips/fix-r10000-14.c: Likewise.
	* gcc.target/mips/fix-r10000-15.c: Likewise.

2008-11-15  Jakub Jelinek  <jakub@redhat.com>

	PR c++/37561
	* gcc.dg/pr37561.c: New test.
	* g++.dg/other/increment1.C: New test.
